@@ -5,6 +5,7 @@
 * Fix missing manual in deb package lp:1889776
 * Fix caching of duplicate tracks that reference the same file #3027
 * Fix loss of precision when dealing with floating-point sample positions while setting loop out position and seeking using vinyl control #3126 #3127
+* prevent moving a loop beyond track end #3117 https://bugs.launchpad.net/mixxx/+bug/1799574
 
 ==== 2.2.4 2020-05-10 ====
 
